--- a/projects/front-components/src/lib/styles/custom-variables.scss
+++ b/projects/front-components/src/lib/styles/custom-variables.scss
@@ -2,70 +2,73 @@
 
 :root {
     /* Mapped - Light */
-    --border-focus: #{$primary-400};
-    --surface-page: #{$neutral-white};
-    --border-focus-error: rgba(255, 255, 255, 1);
-    --surface-primary: #{$neutral-white};
-    --surface-information: #{$neutral-800};
-    --surface-information-2: #{$primary-50};
     --surface-action: #{$primary-default};
-    --surface-action-hover: #{$primary-600};
+    --surface-primary: #{$neutral-white};
     --surface-action-hover-2: #{$neutral-200};
-    --surface-action-pressed: #{$primary-700};
-    --surface-action-pressed-2: #{$neutral-300};
-    --surface-disabled: #{$neutral-100};
     --icon-action-hover: #{$neutral-700};
     --icon-action: #{$neutral-500};
-    --icon-action-2: #{$neutral-600};
-    --icon-on-action: #{$neutral-white};
-    --icon-on-disabled: #{$neutral-400};
-    --icon-primary: #{$neutral-900};
     --border-primary: #{$neutral-200};
-    --border-disabled: #{$neutral-300};
     --text-on-action: #{$neutral-white};
+    --icon-on-action: #{$neutral-white};
+    --surface-action-hover: #{$primary-600};
+    --icon-on-disabled: #{$neutral-400};
     --text-on-disabled: #{$neutral-400};
-    --text-disabled: #{$neutral-500};
+    --surface-disabled: #{$neutral-100};
+    --border-disabled: #{$neutral-300};
     --text-hover: #{$neutral-800};
-    --text-primary: #{$neutral-900};
     --text-secondary: #{$neutral-700};
+    --text-primary: #{$neutral-900};
+    --surface-information-2: #{$primary-50};
+    --surface-action-pressed: #{$primary-700};
     --text-tertiary: #{$neutral-600};
+    --border-focus: #{$primary-400};
+    --border-focus-error: #ffffff;
+    --surface-action-pressed-2: #{$neutral-300};
+    --surface-page: #{$neutral-white};
+    --icon-primary: #{$neutral-700};
     --text-on-information: #{$neutral-white};
+    --surface-information: #{$neutral-800};
     --text-action: #{$neutral-500};
+    --text-disabled: #{$neutral-500};
+    --icon-action-2: #{$neutral-600};
+    --text-headings: #{$neutral-950};
+    --text-quaternary: #{$neutral-500};
+    --surface-secondary: #{$neutral-50};
 
     /* Mapped - Dark */
     .dark {
-        --border-focus: #{$primary-400};
-        --surface-page: #{$neutral-800};
-        --surface-primary: #{$neutral-800};
-        --border-focus-error: rgba(255, 255, 255, 1);
-        --surface-secondary: #{$neutral-800};
-        --surface-information: #{$neutral-500};
-        --surface-information-2: #{$primary-900};
         --surface-action: #{$primary-default};
-        --surface-action-hover: #{$primary-600};
+        --surface-primary: #{$neutral-800};
         --surface-action-hover-2: #{$neutral-700};
-        --surface-action-pressed: #{$primary-700};
-        --surface-action-pressed-2: #{$neutral-600};
-        --surface-disabled: #{$neutral-950};
         --icon-action-hover: #{$neutral-200};
         --icon-action: #{$neutral-100};
-        --icon-action-2: #{$neutral-100};
-        --icon-on-action: #{$neutral-white};
-        --icon-on-disabled: #{$neutral-400};
-        --icon-primary: #{$neutral-25};
-        --border-primary: rgba(65, 70, 81, 1);
-        --border-disabled: #{$neutral-600};
+        --border-primary: #414651;
         --text-on-action: #{$neutral-white};
+        --icon-on-action: #{$neutral-white};
+        --surface-action-hover: #{$primary-600};
+        --icon-on-disabled: #{$neutral-400};
         --text-on-disabled: #{$neutral-400};
-        --text-disabled: #{$neutral-500};
+        --surface-disabled: #{$neutral-600};
+        --border-disabled: #{$neutral-600};
         --text-hover: #{$neutral-200};
-        --text-primary: #{$neutral-300};
         --text-secondary: #{$neutral-200};
+        --text-primary: #{$neutral-300};
+        --surface-information-2: #{$primary-900};
+        --surface-action-pressed: #{$primary-700};
         --text-tertiary: #{$neutral-400};
-        --text-quaternary: #{$neutral-500};
+        --border-focus: #{$primary-400};
+        --border-focus-error: #ffffff;
+        --surface-action-pressed-2: #{$neutral-600};
+        --surface-page: #{$neutral-800};
+        --icon-primary: #{$neutral-25};
         --text-on-information: #{$neutral-300};
+        --surface-information: #{$neutral-500};
         --text-action: #{$neutral-500};
-        --text-headings: rgba(255, 255, 255, 1);
+        --text-disabled: #{$neutral-500};
+        --icon-action-2: #{$neutral-100};
+        --text-headings: #ffffff;
+        --text-quaternary: #{$neutral-500};
+        --surface-secondary: #{$neutral-900};
     }
 
     /* FONT-SIZE */
