feature/convert-figma-tokens: only css variables, remove converting script

--- a/projects/front-components/src/lib/styles/_variables/_alias.scss
+++ b/projects/front-components/src/lib/styles/_variables/_alias.scss
@@ -1,41 +1,44 @@
 @import "_brand";
 
-$neutral-950: $grey-950;
-$primary-default: $blue-500;
-$neutral-25: $grey-25;
-$neutral-50: $grey-50;
-$neutral-100: $grey-100;
-$neutral-200: $grey-200;
-$neutral-300: $grey-300;
-$neutral-400: $grey-400;
-$neutral-500: $grey-500;
-$neutral-600: $grey-600;
-$neutral-700: $grey-700;
-$neutral-800: $grey-800;
-$neutral-900: $grey-900;
-$primary-600: $blue-600;
-$primary-700: $blue-700;
-$primary-800: $blue-800;
-$primary-900: $blue-900;
-$primary-400: $blue-400;
-$primary-300: $blue-300;
-$primary-200: $blue-200;
-$primary-100: $blue-100;
-$primary-50: $blue-50;
-$neutral-white: $pure-white;
-$neutral-black: $pure-black;
-$border-width-none: $scale-0;
-$border-width-sm: $scale-0_25-1px;
-$border-width-md: $scale-0_5-2px;
-$border-width-lg: $scale-1-4px;
-$border-radius-none: $scale-0;
-$border-radius-xxs: $scale-0_5-2px;
-$border-radius-xs: $scale-1-4px;
-$border-radius-sm: $scale-1_5-6px;
-$border-radius-round: $scale-unlimited-9999px;
-$border-radius-md: $scale-2-8px;
-$border-radius-lg: $scale-2_5-10px;
-$border-radius-xl: $scale-3-12px;
-$border-radius-2xl: $scale-4-16px;
-$border-radius-3-xl: $scale-5-20px;
-$border-radius-4-xl: $scale-6-24px;
+{
+    --neutral-950: var(--grey-950);
+    --primary-default: var(--blue-500);
+    --neutral-25: var(--grey-25);
+    --neutral-50: var(--grey-50);
+    --neutral-100: var(--grey-100);
+    --neutral-200: var(--grey-200);
+    --neutral-300: var(--grey-300);
+    --neutral-400: var(--grey-400);
+    --neutral-500: var(--grey-500);
+    --neutral-600: var(--grey-600);
+    --neutral-700: var(--grey-700);
+    --neutral-800: var(--grey-800);
+    --neutral-900: var(--grey-900);
+    --primary-600: var(--blue-600);
+    --primary-700: var(--blue-700);
+    --primary-800: var(--blue-800);
+    --primary-900: var(--blue-900);
+    --primary-400: var(--blue-400);
+    --primary-300: var(--blue-300);
+    --primary-200: var(--blue-200);
+    --primary-100: var(--blue-100);
+    --primary-50: var(--blue-50);
+    --neutral-white: var(--pure-white);
+    --neutral-black: var(--pure-black);
+    --border-width-none: var(--scale-0);
+    --border-width-sm: var(--scale-0_25-1px);
+    --border-width-md: var(--scale-0_5-2px);
+    --border-width-lg: var(--scale-1-4px);
+    --border-radius-none: var(--scale-0);
+    --border-radius-xxs: var(--scale-0_5-2px);
+    --border-radius-xs: var(--scale-1-4px);
+    --border-radius-sm: var(--scale-1_5-6px);
+    --border-radius-round: var(--scale-unlimited-9999px);
+    --border-radius-md: var(--scale-2-8px);
+    --border-radius-lg: var(--scale-2_5-10px);
+    --border-radius-xl: var(--scale-3-12px);
+    --border-radius-2xl: var(--scale-4-16px);
+    --border-radius-3-xl: var(--scale-5-20px);
+    --border-radius-4-xl: var(--scale-6-24px);
+
+}
