--- a/projects/front-components/src/lib/styles/custom-variables.scss
+++ b/projects/front-components/src/lib/styles/custom-variables.scss
@@ -2,73 +2,74 @@
 
 :root {
     /* Mapped - Light */
-    --surface-action: #{$primary-default};
-    --surface-primary: #{$neutral-white};
-    --surface-action-hover-2: #{$neutral-200};
-    --icon-action-hover: #{$neutral-700};
-    --icon-action: #{$neutral-500};
-    --border-primary: #{$neutral-200};
-    --text-on-action: #{$neutral-white};
-    --icon-on-action: #{$neutral-white};
-    --surface-action-hover: #{$primary-600};
-    --icon-on-disabled: #{$neutral-400};
-    --text-on-disabled: #{$neutral-400};
-    --surface-disabled: #{$neutral-100};
-    --border-disabled: #{$neutral-300};
-    --text-hover: #{$neutral-800};
-    --text-secondary: #{$neutral-700};
-    --text-primary: #{$neutral-900};
-    --surface-information-2: #{$primary-50};
-    --surface-action-pressed: #{$primary-700};
-    --text-tertiary: #{$neutral-600};
-    --border-focus: #{$primary-400};
+    --surface-action: var(--primary-default);
+    --surface-primary: var(--neutral-white);
+    --surface-action-hover-2: var(--neutral-200);
+    --icon-action-hover: var(--neutral-700);
+    --icon-action: var(--neutral-500);
+    --border-primary: var(--neutral-200);
+    --text-on-action: var(--neutral-white);
+    --icon-on-action: var(--neutral-white);
+    --surface-action-hover: var(--primary-600);
+    --icon-on-disabled: var(--neutral-400);
+    --text-on-disabled: var(--neutral-400);
+    --surface-disabled: var(--neutral-100);
+    --border-disabled: var(--neutral-300);
+    --text-hover: var(--neutral-800);
+    --text-secondary: var(--neutral-700);
+    --text-primary: var(--neutral-900);
+    --surface-information-2: var(--primary-50);
+    --surface-action-pressed: var(--primary-700);
+    --text-tertiary: var(--neutral-600);
+    --border-focus: var(--primary-400);
     --border-focus-error: #ffffff;
-    --surface-action-pressed-2: #{$neutral-300};
-    --surface-page: #{$neutral-white};
-    --icon-primary: #{$neutral-700};
-    --text-on-information: #{$neutral-white};
-    --surface-information: #{$neutral-800};
-    --text-action: #{$neutral-500};
-    --text-disabled: #{$neutral-500};
-    --icon-action-2: #{$neutral-600};
-    --text-headings: #{$neutral-950};
-    --text-quaternary: #{$neutral-500};
-    --surface-secondary: #{$neutral-50};
+    --surface-action-pressed-2: var(--neutral-300);
+    --surface-page: var(--neutral-white);
+    --icon-primary: var(--neutral-700);
+    --text-on-information: var(--neutral-white);
+    --surface-information: var(--neutral-800);
+    --text-action: var(--neutral-500);
+    --text-disabled: var(--neutral-500);
+    --icon-action-2: var(--neutral-600);
+    --text-headings: var(--neutral-950);
+    --text-quaternary: var(--neutral-500);
+    --surface-secondary: var(--neutral-50);
+
 
     /* Mapped - Dark */
     .dark {
-        --surface-action: #{$primary-default};
-        --surface-primary: #{$neutral-800};
-        --surface-action-hover-2: #{$neutral-700};
-        --icon-action-hover: #{$neutral-200};
-        --icon-action: #{$neutral-100};
+        --surface-action: var(--primary-default);
+        --surface-primary: var(--neutral-800);
+        --surface-action-hover-2: var(--neutral-700);
+        --icon-action-hover: var(--neutral-200);
+        --icon-action: var(--neutral-100);
         --border-primary: #414651;
-        --text-on-action: #{$neutral-white};
-        --icon-on-action: #{$neutral-white};
-        --surface-action-hover: #{$primary-600};
-        --icon-on-disabled: #{$neutral-400};
-        --text-on-disabled: #{$neutral-400};
-        --surface-disabled: #{$neutral-600};
-        --border-disabled: #{$neutral-600};
-        --text-hover: #{$neutral-200};
-        --text-secondary: #{$neutral-200};
-        --text-primary: #{$neutral-300};
-        --surface-information-2: #{$primary-900};
-        --surface-action-pressed: #{$primary-700};
-        --text-tertiary: #{$neutral-400};
-        --border-focus: #{$primary-400};
+        --text-on-action: var(--neutral-white);
+        --icon-on-action: var(--neutral-white);
+        --surface-action-hover: var(--primary-600);
+        --icon-on-disabled: var(--neutral-400);
+        --text-on-disabled: var(--neutral-400);
+        --surface-disabled: var(--neutral-600);
+        --border-disabled: var(--neutral-600);
+        --text-hover: var(--neutral-200);
+        --text-secondary: var(--neutral-200);
+        --text-primary: var(--neutral-300);
+        --surface-information-2: var(--primary-900);
+        --surface-action-pressed: var(--primary-700);
+        --text-tertiary: var(--neutral-400);
+        --border-focus: var(--primary-400);
         --border-focus-error: #ffffff;
-        --surface-action-pressed-2: #{$neutral-600};
-        --surface-page: #{$neutral-800};
-        --icon-primary: #{$neutral-25};
-        --text-on-information: #{$neutral-300};
-        --surface-information: #{$neutral-500};
-        --text-action: #{$neutral-500};
-        --text-disabled: #{$neutral-500};
-        --icon-action-2: #{$neutral-100};
+        --surface-action-pressed-2: var(--neutral-600);
+        --surface-page: var(--neutral-800);
+        --icon-primary: var(--neutral-25);
+        --text-on-information: var(--neutral-300);
+        --surface-information: var(--neutral-500);
+        --text-action: var(--neutral-500);
+        --text-disabled: var(--neutral-500);
+        --icon-action-2: var(--neutral-100);
         --text-headings: #ffffff;
-        --text-quaternary: #{$neutral-500};
-        --surface-secondary: #{$neutral-900};
+        --text-quaternary: var(--neutral-500);
+        --surface-secondary: var(--neutral-900);
     }
 
     /* FONT-SIZE */
