--- a/projects/front-components/src/lib/styles/_variables/_brand.scss
+++ b/projects/front-components/src/lib/styles/_variables/_brand.scss
@@ -1,59 +1,61 @@
-$grey-950: #0a0d12;
-$blue-500: #0b77ca;
-$grey-500: #717680;
-$grey-600: #535862;
-$grey-700: #414651;
-$grey-800: #1c1c1c;
-$grey-900: #191919;
-$grey-400: #a4a7ae;
-$grey-300: #d5d7da;
-$grey-200: #e9eaeb;
-$grey-100: #f5f5f5;
-$grey-50: #fafafa;
-$grey-25: #fdfdfd;
-$blue-600: #095fa2;
-$blue-700: #074779;
-$blue-800: #043051;
-$blue-900: #021828;
-$blue-400: #3c92d5;
-$blue-300: #6daddf;
-$blue-200: #9dc9ea;
-$blue-100: #cee4f4;
-$blue-50: #f3f8fc;
-$scale-0: 0px;
-$scale-1-4px: 4px;
-$scale-2-8px: 8px;
-$scale-3-12px: 12px;
-$scale-0_5-2px: 2px;
-$scale-1_5-6px: 6px;
-$scale-4-16px: 16px;
-$scale-5-20px: 20px;
-$scale-6-24px: 24px;
-$scale-8-32px: 32px;
-$scale-10-40px: 40px;
-$scale-12-48px: 48px;
-$scale-16-64px: 64px;
-$scale-20-80px: 80px;
-$scale-24-96px: 96px;
-$scale-32-128px: 128px;
-$scale-40-160px: 160px;
-$scale-48-192px: 192px;
-$scale-56-224px: 224px;
-$scale-64-256px: 256px;
-$scale-80-320px: 320px;
-$scale-96-384px: 384px;
-$scale-120-480px: 480px;
-$scale-140-560px: 560px;
-$scale-160-640px: 640px;
-$scale-180-720px: 720px;
-$scale-192-768px: 768px;
-$scale-320-1280px: 1280px;
-$scale-256-1024px: 1024px;
-$scale-360-1440px: 1440px;
-$scale-400-1600px: 1600px;
-$scale-480-1920px: 1920px;
-$pure-white: #ffffff;
-$pure-black: #000000;
-$scale-0_25-1px: 1px;
-$scale-unlimited-9999px: 9999px;
-$scale-2_5-10px: 10px;
+{
+    --grey-950: #0a0d12;
+    --blue-500: #0b77ca;
+    --grey-500: #717680;
+    --grey-600: #535862;
+    --grey-700: #414651;
+    --grey-800: #1c1c1c;
+    --grey-900: #191919;
+    --grey-400: #a4a7ae;
+    --grey-300: #d5d7da;
+    --grey-200: #e9eaeb;
+    --grey-100: #f5f5f5;
+    --grey-50: #fafafa;
+    --grey-25: #fdfdfd;
+    --blue-600: #095fa2;
+    --blue-700: #074779;
+    --blue-800: #043051;
+    --blue-900: #021828;
+    --blue-400: #3c92d5;
+    --blue-300: #6daddf;
+    --blue-200: #9dc9ea;
+    --blue-100: #cee4f4;
+    --blue-50: #f3f8fc;
+    --scale-0: 0px;
+    --scale-1-4px: 4px;
+    --scale-2-8px: 8px;
+    --scale-3-12px: 12px;
+    --scale-0_5-2px: 2px;
+    --scale-1_5-6px: 6px;
+    --scale-4-16px: 16px;
+    --scale-5-20px: 20px;
+    --scale-6-24px: 24px;
+    --scale-8-32px: 32px;
+    --scale-10-40px: 40px;
+    --scale-12-48px: 48px;
+    --scale-16-64px: 64px;
+    --scale-20-80px: 80px;
+    --scale-24-96px: 96px;
+    --scale-32-128px: 128px;
+    --scale-40-160px: 160px;
+    --scale-48-192px: 192px;
+    --scale-56-224px: 224px;
+    --scale-64-256px: 256px;
+    --scale-80-320px: 320px;
+    --scale-96-384px: 384px;
+    --scale-120-480px: 480px;
+    --scale-140-560px: 560px;
+    --scale-160-640px: 640px;
+    --scale-180-720px: 720px;
+    --scale-192-768px: 768px;
+    --scale-320-1280px: 1280px;
+    --scale-256-1024px: 1024px;
+    --scale-360-1440px: 1440px;
+    --scale-400-1600px: 1600px;
+    --scale-480-1920px: 1920px;
+    --pure-white: #ffffff;
+    --pure-black: #000000;
+    --scale-0_25-1px: 1px;
+    --scale-unlimited-9999px: 9999px;
+    --scale-2_5-10px: 10px;
+}
