--- a/projects/test-app/src/app/app.component.html
+++ b/projects/test-app/src/app/app.component.html
@@ -1,1 +1,12 @@
-<snab-icon [icon]="IconType.Bell" [color]="Colors.IconOnDisabled"/>
+<ss-lib-icon [icon]="IconType.Bell" [color]="Colors.IconOnDisabled"/>
+
+<ss-lib-text [type]="TextType.BodyXs" [weight]="TextWeight.Regular">Обычный текст</ss-lib-text>
+<ss-lib-text [type]="TextType.BodySm">Обычный текст</ss-lib-text>
+<ss-lib-text [type]="TextType.BodyMd">Обычный текст</ss-lib-text>
+<ss-lib-text [type]="TextType.BodyLg">Обычный текст</ss-lib-text>
+<ss-lib-text [type]="TextType.BodyXl">Обычный текст</ss-lib-text>
+
+<ss-lib-text [type]="TextType.HeadingXs" [weight]="TextWeight.Regular">Обычный текст</ss-lib-text>
+<ss-lib-text [type]="TextType.HeadingXs" [weight]="TextWeight.Medium">Текст медиум</ss-lib-text>
+<ss-lib-text [type]="TextType.HeadingXs" [weight]="TextWeight.Semibold">Полу-жирный</ss-lib-text>
+<ss-lib-text [type]="TextType.HeadingXs" [weight]="TextWeight.Bold">Жирный текст</ss-lib-text>
