feature/2867: add ss-lib-button

--- a/projects/front-components/src/lib/shared/styles/_variables/_brand.scss
+++ b/projects/front-components/src/lib/shared/styles/_variables/_brand.scss
@@ -58,4 +58,16 @@
     --scale-0_25-1px: 1px;
     --scale-unlimited-9999px: 9999px;
     --scale-2_5-10px: 10px;
+    --red-400: #f97066;
+    --red-25: #fffbfa;
+    --red-50: #fef3f2;
+    --red-100: #fee4e2;
+    --red-200: #fecdca;
+    --red-300: #fda29b;
+    --red-500: #f04438;
+    --red-600: #d92d20;
+    --red-700: #b42318;
+    --red-800: #912018;
+    --red-900: #7a271a;
+    --red-950: #55160c;
 }
