--- a/projects/front-components/src/lib/shared/styles/_variables/_alias.scss
+++ b/projects/front-components/src/lib/shared/styles/_variables/_alias.scss
@@ -38,4 +38,16 @@
     --border-radius-2xl: var(--scale-4-16px);
     --border-radius-3-xl: var(--scale-5-20px);
     --border-radius-4-xl: var(--scale-6-24px);
+    --error-400: var(--red-400);
+    --error-25: var(--red-25);
+    --error-50: var(--red-50);
+    --error-100: var(--red-100);
+    --error-200: var(--red-200);
+    --error-300: var(--red-300);
+    --error-500: var(--red-500);
+    --error-600: var(--red-600);
+    --error-700: var(--red-700);
+    --error-800: var(--red-800);
+    --error-900: var(--red-900);
+    --error-950: var(--red-950);
 }
