--- a/projects/front-components/src/lib/components/button/button.component.html
+++ b/projects/front-components/src/lib/components/button/button.component.html
@@ -9,7 +9,7 @@
             [icon]="icon()!"
             [height]="'20'"
             [width]="'20'"
-            [color]="isHover() | mapper : getColor : disabled() : colorsIconBtn().default : colorsIconBtn().hover : colorsIconBtn().disabled"
+            [color]="colorsIconBtn() | getColor : isHover() : disabled() : true"
         />
     } @else {
         @if (icon() | mapper : hasIconOnSide :iconPosition() === IconPosition.Start) {
@@ -17,7 +17,7 @@
                 [icon]="icon()!"
                 [height]="'20'"
                 [width]="'20'"
-                [color]="isHover() | mapper : getColor : disabled() : colorsIconBtn().default : colorsIconBtn().hover : colorsIconBtn().disabled"
+                [color]="colorsIconBtn() | getColor : isHover() : disabled() : false"
             />
         }
 
@@ -26,7 +26,7 @@
                 <ss-lib-text
                     [type]="TextType.BodySm"
                     [weight]="TextWeight.Regular"
-                    [color]="isHover() | mapper : getColor : disabled() : colorsTextBtn().default : colorsTextBtn().hover : colorsTextBtn().disabled"
+                    [color]="colorsTextBtn() | getColor : isHover() : disabled() : false"
                 >
                     {{ text() }}
                 </ss-lib-text>
@@ -35,7 +35,7 @@
                 <ss-lib-text
                     [type]="TextType.BodySm"
                     [weight]="TextWeight.Regular"
-                    [color]="isHover() | mapper : getColor : disabled() : colorsTextBtn().default : colorsTextBtn().hover : colorsTextBtn().disabled"
+                    [color]="colorsTextBtn() | getColor : isHover() : disabled() : false"
                 >
                     {{ text() }}
                 </ss-lib-text>
@@ -44,7 +44,7 @@
                 <ss-lib-text
                     [type]="TextType.BodyMd"
                     [weight]="TextWeight.Regular"
-                    [color]="isHover() | mapper : getColor : disabled() : colorsTextBtn().default : colorsTextBtn().hover : colorsTextBtn().disabled"
+                    [color]="colorsTextBtn() | getColor : isHover() : disabled() : false"
                 >
                     {{ text() }}
                 </ss-lib-text>
@@ -56,7 +56,7 @@
                 [icon]="icon()!"
                 [height]="'20'"
                 [width]="'20'"
-                [color]="isHover() | mapper : getColor : disabled() : colorsIconBtn().default : colorsIconBtn().hover : colorsIconBtn().disabled"
+                [color]="colorsIconBtn() | getColor : isHover() : disabled() : false"
             />
         }
     }
