--- a/projects/front-components/src/lib/components/button/button.component.html
+++ b/projects/front-components/src/lib/components/button/button.component.html
@@ -1,15 +1,19 @@
 <button
     [ngClass]="['type-' + type(), 'size-' + size(), iconPosition()]"
     [disabled]="disabled()"
-    (mouseenter)="isHover.set(true)"
-    (mouseleave)="isHover.set(false)"
+    (mouseenter)="updateState(StateTypes.Hover, true)"
+    (mouseleave)="updateState(StateTypes.Hover, false)"
+    (mousedown)="updateState(StateTypes.Pressed, true)"
+    (mouseup)="updateState(StateTypes.Pressed, false)"
+    (focus)="checkFocus($event)"
+
 >
     @if (type() | mapper: isIconButton : iconPosition()) {
         <ss-lib-icon
             [icon]="icon()!"
             [height]="'20'"
             [width]="'20'"
-            [color]="colorsIconBtn() | getColor : isHover() : disabled() : true"
+            [color]="colorsIconBtn() | getColor : state() : disabled() : true"
         />
     } @else {
         @if (icon() | mapper : hasIconOnSide :iconPosition() === IconPosition.Start) {
@@ -17,7 +21,7 @@
                 [icon]="icon()!"
                 [height]="'20'"
                 [width]="'20'"
-                [color]="colorsIconBtn() | getColor : isHover() : disabled() : false"
+                [color]="colorsIconBtn() | getColor : state() : disabled() : false"
             />
         }
 
@@ -26,7 +30,7 @@
                 <ss-lib-text
                     [type]="TextType.BodySm"
                     [weight]="TextWeight.Regular"
-                    [color]="colorsTextBtn() | getColor : isHover() : disabled() : false"
+                    [color]="colorsTextBtn() | getColor : state() : disabled() : false"
                 >
                     {{ text() }}
                 </ss-lib-text>
@@ -35,7 +39,7 @@
                 <ss-lib-text
                     [type]="TextType.BodySm"
                     [weight]="TextWeight.Regular"
-                    [color]="colorsTextBtn() | getColor : isHover() : disabled() : false"
+                    [color]="colorsTextBtn() | getColor : state() : disabled() : false"
                 >
                     {{ text() }}
                 </ss-lib-text>
@@ -44,7 +48,7 @@
                 <ss-lib-text
                     [type]="TextType.BodyMd"
                     [weight]="TextWeight.Regular"
-                    [color]="colorsTextBtn() | getColor : isHover() : disabled() : false"
+                    [color]="colorsTextBtn() | getColor : state() : disabled() : false"
                 >
                     {{ text() }}
                 </ss-lib-text>
@@ -56,7 +60,7 @@
                 [icon]="icon()!"
                 [height]="'20'"
                 [width]="'20'"
-                [color]="colorsIconBtn() | getColor : isHover() : disabled() : false"
+                [color]="colorsIconBtn() | getColor : state() : disabled() : false"
             />
         }
     }
