feature/2885: add ss-lib-toggle

--- a/projects/test-app/src/app/app.component.html
+++ b/projects/test-app/src/app/app.component.html
@@ -141,3 +141,8 @@
     [icon]="IconType.Bell"
     [iconPosition]="IconPosition.Start"
 />
+
+<br/>
+
+<ss-lib-toggle [formControl]="toggleCtrl"></ss-lib-toggle>
+
