feature/2903: add ss-lib-toggle-icon

--- a/projects/test-app/src/app/app.component.html
+++ b/projects/test-app/src/app/app.component.html
@@ -145,4 +145,7 @@
 <br/>
 
 <ss-lib-toggle [formControl]="toggleCtrl"></ss-lib-toggle>
+<br>
+
+<ss-lib-toggle-icon [formControl]="toggleCtrl"></ss-lib-toggle-icon>
 
