--- a/projects/test-app/src/app/app.component.html
+++ b/projects/test-app/src/app/app.component.html
@@ -148,4 +148,7 @@
 <br>
 
 <ss-lib-toggle-icon [formControl]="toggleCtrl"></ss-lib-toggle-icon>
+<br>
 
+
+<ss-lib-number-picker [formControl]="numberPickerCtrl" [min]="1" [max]="10" [step]="1"></ss-lib-number-picker>
