--- a/projects/test-app/src/app/app.component.html
+++ b/projects/test-app/src/app/app.component.html
@@ -11,144 +11,144 @@
 <ss-lib-text [type]="TextType.HeadingXs" [weight]="TextWeight.Semibold">Полу-жирный</ss-lib-text>
 <ss-lib-text [type]="TextType.HeadingXs" [weight]="TextWeight.Bold">Жирный текст</ss-lib-text>
 
-<!--<ss-lib-button-->
-<!--    [type]="ButtonType.Primary"-->
-<!--    [text]="'Кнопка'"-->
-<!--    [icon]="IconType.Bell"-->
-<!--    [iconPosition]="IconPosition.End"-->
-<!--    [size]="Size.Small"-->
-<!--/>-->
-<!--<br/>-->
+<ss-lib-button
+    [type]="ButtonType.Primary"
+    [text]="'Кнопка'"
+    [icon]="IconType.Bell"
+    [iconPosition]="IconPosition.End"
+    [size]="Size.Small"
+/>
+<br/>
 
-<!--<ss-lib-button-->
-<!--    [type]="ButtonType.Primary"-->
-<!--    [text]="'Кнопка'"-->
-<!--    [icon]="IconType.Bell"-->
-<!--    [iconPosition]="IconPosition.End"-->
-<!--    [size]="Size.Medium"-->
-<!--/>-->
-<!--<br/>-->
+<ss-lib-button
+    [type]="ButtonType.Primary"
+    [text]="'Кнопка'"
+    [icon]="IconType.Bell"
+    [iconPosition]="IconPosition.End"
+    [size]="Size.Medium"
+/>
+<br/>
 
-<!--<ss-lib-button-->
-<!--    [type]="ButtonType.Primary"-->
-<!--    [text]="'Кнопка'"-->
-<!--    [icon]="IconType.Bell"-->
-<!--    [iconPosition]="IconPosition.End"-->
-<!--    [size]="Size.Large"-->
-<!--/>-->
-<!--<br/>-->
+<ss-lib-button
+    [type]="ButtonType.Primary"
+    [text]="'Кнопка'"
+    [icon]="IconType.Bell"
+    [iconPosition]="IconPosition.End"
+    [size]="Size.Large"
+/>
+<br/>
 
-<!--<ss-lib-button-->
-<!--    [type]="ButtonType.Primary"-->
-<!--    [text]="'Кнопка'"-->
-<!--    [icon]="IconType.Bell"-->
-<!--    [iconPosition]="IconPosition.End"-->
-<!--    [size]="Size.Large"-->
-<!--    [disabled]="true"-->
-<!--/>-->
+<ss-lib-button
+    [type]="ButtonType.Primary"
+    [text]="'Кнопка'"
+    [icon]="IconType.Bell"
+    [iconPosition]="IconPosition.End"
+    [size]="Size.Large"
+    [disabled]="true"
+/>
 
-<!--<br/>-->
+<br/>
 
-<!--<ss-lib-button-->
-<!--    [type]="ButtonType.Secondary"-->
-<!--    [text]="'Кнопка'"-->
-<!--    [icon]="IconType.Bell"-->
-<!--    [iconPosition]="IconPosition.End"-->
-<!--    [size]="Size.Large"-->
-<!--/>-->
+<ss-lib-button
+    [type]="ButtonType.Secondary"
+    [text]="'Кнопка'"
+    [icon]="IconType.Bell"
+    [iconPosition]="IconPosition.End"
+    [size]="Size.Large"
+/>
 
-<!--<br/>-->
+<br/>
 
-<!--<ss-lib-button-->
-<!--    [type]="ButtonType.Flat"-->
-<!--    [text]="'Кнопка'"-->
-<!--    [icon]="IconType.Bell"-->
-<!--    [iconPosition]="IconPosition.End"-->
-<!--    [size]="Size.Large"-->
-<!--/>-->
+<ss-lib-button
+    [type]="ButtonType.Flat"
+    [text]="'Кнопка'"
+    [icon]="IconType.Bell"
+    [iconPosition]="IconPosition.End"
+    [size]="Size.Large"
+/>
 
-<!--&lt;!&ndash;  *****   &ndash;&gt;-->
-<!--<ss-lib-button-->
-<!--    [type]="ButtonType.Primary"-->
-<!--    [text]="'Кнопка'"-->
-<!--    [icon]="IconType.Bell"-->
-<!--    [iconPosition]="IconPosition.OnlyIcon"-->
-<!--    [size]="Size.Small"-->
-<!--/>-->
-<!--<br/>-->
+<!--  *****   -->
+<ss-lib-button
+    [type]="ButtonType.Primary"
+    [text]="'Кнопка'"
+    [icon]="IconType.Bell"
+    [iconPosition]="IconPosition.OnlyIcon"
+    [size]="Size.Small"
+/>
+<br/>
 
-<!--<ss-lib-button-->
-<!--    [type]="ButtonType.Primary"-->
-<!--    [text]="'Кнопка'"-->
-<!--    [icon]="IconType.Bell"-->
-<!--    [iconPosition]="IconPosition.OnlyIcon"-->
-<!--    [size]="Size.Medium"-->
-<!--/>-->
-<!--<br/>-->
+<ss-lib-button
+    [type]="ButtonType.Primary"
+    [text]="'Кнопка'"
+    [icon]="IconType.Bell"
+    [iconPosition]="IconPosition.OnlyIcon"
+    [size]="Size.Medium"
+/>
+<br/>
 
-<!--<ss-lib-button-->
-<!--    [type]="ButtonType.Primary"-->
-<!--    [text]="'Кнопка'"-->
-<!--    [icon]="IconType.Bell"-->
-<!--    [iconPosition]="IconPosition.OnlyIcon"-->
-<!--    [size]="Size.Large"-->
-<!--/>-->
-<!--<br/>-->
+<ss-lib-button
+    [type]="ButtonType.Primary"
+    [text]="'Кнопка'"
+    [icon]="IconType.Bell"
+    [iconPosition]="IconPosition.OnlyIcon"
+    [size]="Size.Large"
+/>
+<br/>
 
-<!--<ss-lib-button-->
-<!--    [type]="ButtonType.Primary"-->
-<!--    [text]="'Кнопка'"-->
-<!--    [icon]="IconType.Bell"-->
-<!--    [iconPosition]="IconPosition.OnlyIcon"-->
-<!--    [size]="Size.Large"-->
-<!--    [disabled]="true"-->
-<!--/>-->
+<ss-lib-button
+    [type]="ButtonType.Primary"
+    [text]="'Кнопка'"
+    [icon]="IconType.Bell"
+    [iconPosition]="IconPosition.OnlyIcon"
+    [size]="Size.Large"
+    [disabled]="true"
+/>
 
-<!--<br/>-->
+<br/>
 
 
-<!--<ss-lib-button-->
-<!--    [type]="ButtonType.Secondary"-->
-<!--    [text]="'Кнопка'"-->
-<!--    [icon]="IconType.Bell"-->
-<!--    [iconPosition]="IconPosition.OnlyIcon"-->
-<!--    [size]="Size.Large"-->
-<!--/>-->
+<ss-lib-button
+    [type]="ButtonType.Secondary"
+    [text]="'Кнопка'"
+    [icon]="IconType.Bell"
+    [iconPosition]="IconPosition.OnlyIcon"
+    [size]="Size.Large"
+/>
 
-<!--<br/>-->
+<br/>
 
-<!--<ss-lib-button-->
-<!--    [type]="ButtonType.Flat"-->
-<!--    [text]="'Кнопка'"-->
-<!--    [icon]="IconType.Bell"-->
-<!--    [iconPosition]="IconPosition.OnlyIcon"-->
-<!--    [size]="Size.Large"-->
-<!--/>-->
-<!--<br/>-->
+<ss-lib-button
+    [type]="ButtonType.Flat"
+    [text]="'Кнопка'"
+    [icon]="IconType.Bell"
+    [iconPosition]="IconPosition.OnlyIcon"
+    [size]="Size.Large"
+/>
+<br/>
 
-<!--<ss-lib-button-->
-<!--    [type]="ButtonType.Close"-->
-<!--    [text]="'Кнопка'"-->
-<!--    [icon]="IconType.Bell"-->
-<!--    [iconPosition]="IconPosition.OnlyIcon"-->
-<!--    [size]="Size.Large"-->
-<!--/>-->
-<!--<br/>-->
+<ss-lib-button
+    [type]="ButtonType.Close"
+    [text]="'Кнопка'"
+    [icon]="IconType.Bell"
+    [iconPosition]="IconPosition.OnlyIcon"
+    [size]="Size.Large"
+/>
+<br/>
 
-<!--<ss-lib-button-->
-<!--    [type]="ButtonType.Link"-->
-<!--    [text]="'Кнопка'"-->
-<!--    [icon]="IconType.Bell"-->
-<!--    [iconPosition]="IconPosition.Start"-->
-<!--/>-->
+<ss-lib-button
+    [type]="ButtonType.Link"
+    [text]="'Кнопка'"
+    [icon]="IconType.Bell"
+    [iconPosition]="IconPosition.Start"
+/>
 
-<!--<br/>-->
+<br/>
 
-<!--<ss-lib-toggle [formControl]="toggleCtrl"></ss-lib-toggle>-->
-<!--<br>-->
+<ss-lib-toggle [formControl]="toggleCtrl"></ss-lib-toggle>
+<br>
 
-<!--<ss-lib-toggle-icon [formControl]="toggleCtrl"></ss-lib-toggle-icon>-->
-<!--<br>-->
+<ss-lib-toggle-icon [formControl]="toggleCtrl"></ss-lib-toggle-icon>
+<br>
 
 <div class="input">
     <ss-lib-form-field
