--- a/projects/front-components/src/lib/components/input/input.component.scss
+++ b/projects/front-components/src/lib/components/input/input.component.scss
@@ -5,6 +5,8 @@
     color: inherit;
     transition: outline-color 0.3s ease;
     background: transparent;
+    height: 44px;
+    padding: 10px 14px;
 }
 
 .input-field {
