feature/2908: resize on ss-lib-textarea with rxjs

--- a/projects/front-components/src/lib/components/textarea/textarea.component.html
+++ b/projects/front-components/src/lib/components/textarea/textarea.component.html
@@ -3,7 +3,7 @@
         <div
             class="custom-textarea__pseudo"
             #resizeContainerPseudo
-            [style.height.px]=TEXTAREA_MIN_HEIGHT
+            [style.height.px]=textareaHeight()
         >
             {{ textareaCtrl.value }}
         </div>
@@ -11,7 +11,7 @@
         <textarea
             #resizeContainer
             class="custom-textarea__field"
-            [style.height.px]=TEXTAREA_MIN_HEIGHT
+            [style.height.px]=textareaHeight()
             [formControl]="textareaCtrl"
             [maxlength]="maxLength()"
         ></textarea>
