--- a/projects/front-components/src/lib/components/textarea/textarea.component.html
+++ b/projects/front-components/src/lib/components/textarea/textarea.component.html
@@ -1,5 +1,5 @@
 <div class="custom-textarea">
-    <div class="custom-textarea__field-container" >
+    <div class="custom-textarea__field-container">
         <div
             class="custom-textarea__pseudo"
             #resizeContainerPseudo
@@ -11,11 +11,23 @@
         <textarea
             #resizeContainer
             class="custom-textarea__field"
+            autocomplete="off"
             [style.height.px]=textareaHeight()
             [formControl]="textareaCtrl"
             [maxlength]="maxLength()"
         ></textarea>
 
-        <div class="custom-textarea__resize-icon" (mousedown)="startResize($event)"></div>
+        <div
+            class="custom-textarea__resize-icon"
+            [style.cursor]="textareaCtrl.disabled | mapper : cursorType"
+            (mousedown)="!textareaCtrl.disabled && startResize($event)"
+        >
+            <ss-lib-icon
+                [icon]="IconType.ResizeHandle"
+                [height]="'16'"
+                [width]="'16'"
+                [color]="textareaCtrl.disabled | mapper : getResizeIconColor"
+            />
+        </div>
     </div>
 </div>
