--- a/projects/test-app/src/app/app.component.html
+++ b/projects/test-app/src/app/app.component.html
@@ -170,6 +170,7 @@
         [label]="'Название'"
         [hint]="'Подсказка'"
         [errorText]="'Неверно заполнено'"
+        [showValidationFieldIcon]="false"
     >
         <ss-lib-textarea
             fieldCtrl
