--- a/projects/front-components/src/lib/components/form-field/form-field.component.scss
+++ b/projects/front-components/src/lib/components/form-field/form-field.component.scss
@@ -1,6 +1,11 @@
-.field-info {
-    padding-bottom: 6px;
+.form-field {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    gap: 6px;
+}
 
+.field-info {
     &__label {
         display: flex;
         align-items: center;
@@ -37,32 +42,29 @@
     outline: 1px solid var(--border-disabled);
 }
 
-.field-container:focus-within:not(.state-invalid):not(.state-disabled) {
+.field-container:focus-within:not(.state-invalid) {
     outline: 2px solid var(--border-focus, #3C92D5);
 }
 
-.field-container.validation.state-invalid:not(:focus-within):not(.state-disabled) {
+.field-container.validation.state-invalid:not(:focus-within) {
     outline: 1px solid var(--border-error);
 
     .field-container__error-icon {
         display: flex;
     }
-
-    .field-container__error-message {
-        display: flex;
-    }
 }
 
-.field-container.validation.state-invalid:focus-within:not(.state-disabled) {
+.field-container.validation.state-invalid:focus-within {
     outline: 2px solid var(--border-focus-error);
 
     .field-container__error-icon {
         display: flex;
     }
+}
 
-    .field-container__error-message {
-        display: flex;
-    }
+.field-container.validation.state-invalid:not(:focus-within) ~ .field-container__error-message,
+.field-container.validation.state-invalid:focus-within ~ .field-container__error-message {
+    display: flex;
 }
 
 .field-container__content {
