feature/2908: fix error icon

--- a/projects/test-app/src/app/app.component.html
+++ b/projects/test-app/src/app/app.component.html
@@ -155,6 +155,7 @@
         [label]="'Название'"
         [hint]="'Подсказка'"
         [errorText]="'Неверно заполнено'"
+        [showValidationFieldIcon]="true"
     >
         <ss-lib-input
             fieldCtrl
@@ -170,7 +171,6 @@
         [label]="'Название'"
         [hint]="'Подсказка'"
         [errorText]="'Неверно заполнено'"
-        [showValidationFieldIcon]="false"
     >
         <ss-lib-textarea
             fieldCtrl
