--- a/projects/front-components/src/lib/components/form-field/form-field.component.scss
+++ b/projects/front-components/src/lib/components/form-field/form-field.component.scss
@@ -67,6 +67,11 @@
     display: flex;
 }
 
+.field-container__content-wrapper {
+    display: flex;
+    align-items: center;
+}
+
 .field-container__content {
     flex: 1;
     width: 100%;
@@ -74,6 +79,7 @@
 
 .field-container__error-icon {
     display: none;
+    margin: 0 14px 0 -10px;
 }
 
 .field-container__error-message {
