feature/2908: remove controls from focused events

--- a/projects/front-components/src/lib/components/input/input.component.html
+++ b/projects/front-components/src/lib/components/input/input.component.html
@@ -3,6 +3,7 @@
     (focusout)="updateInputStateOnFocusout($event)"
 >
     <input
+        tabindex="-1"
         class="input-field"
         type="text"
         [formControl]="inputCtrl"
