--- a/projects/front-components/src/lib/components/textarea/textarea.component.html
+++ b/projects/front-components/src/lib/components/textarea/textarea.component.html
@@ -10,6 +10,7 @@
 
         <textarea
             #resizeContainer
+            tabindex="-1"
             class="custom-textarea__field"
             autocomplete="off"
             [style.height.px]=textareaHeight()
