--- a/projects/front-components/src/lib/components/textarea/textarea.component.scss
+++ b/projects/front-components/src/lib/components/textarea/textarea.component.scss
@@ -23,7 +23,7 @@
         outline: none;
         margin: 0;
         border: 0;
-        padding: 10px 14px;
+        padding: 10px 16px 10px 14px;
     }
 
     &__pseudo, &__field {
