feature/2908: fix textarea height

--- a/projects/test-app/src/app/app.component.html
+++ b/projects/test-app/src/app/app.component.html
@@ -171,7 +171,7 @@
     <ss-lib-form-field
         [label]="'Название'"
         [hint]="'Подсказка'"
-        [errorText]="'Неверно заполнено'"
+        [errorText]="'Текст ошибки'"
     >
         <ss-lib-textarea
             fieldCtrl
