feature/2909: ss-lib-dropdown-item

--- a/projects/test-app/src/app/app.component.html
+++ b/projects/test-app/src/app/app.component.html
@@ -179,3 +179,14 @@
         />
     </ss-lib-form-field>
 </div>
+<br>
+<br>
+
+<ss-lib-dropdown-item [text]="'Опция'" [icon]="IconType.Bell"/>
+<br>
+
+<ss-lib-dropdown-item [text]="'Опция'" [icon]="IconType.Bell" [isDisabled]="true"/>
+<br>
+
+<ss-lib-dropdown-item [text]="'Опция'" [icon]="IconType.Bell" [isDestructive]="true"/>
+<br>
