feature/2909: fix pressed color

--- a/projects/front-components/src/lib/components/dropdown-item/dropdown-item.component.scss
+++ b/projects/front-components/src/lib/components/dropdown-item/dropdown-item.component.scss
@@ -18,7 +18,7 @@
 }
 
 .dropdown-item:active {
-    background: var(--surface-action-pressed-2);
+    background: var(--surface-action-pressed-2) !important;
 }
 
 .dropdown-item:focus-visible {
