--- a/projects/front-components/src/lib/components/dropdown-item/dropdown-item.component.scss
+++ b/projects/front-components/src/lib/components/dropdown-item/dropdown-item.component.scss
@@ -11,6 +11,7 @@
     border-radius: var(--border-radius-sm);
     background: var(--surface-primary);
     padding: 8px 10px;
+    margin: 1px 6px;
 }
 
 .dropdown-item:hover:not(.disabled) {
